# Waterfall

./: .gitignore  README.md  RunEnv.sh  build_bridge.sh  pwm_func4_demo.py  setup.cfg  setup.py  test_pwm_func4_demo.py
Hose/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
Hose/launch/: firehose.launch.py  uniform_pump.launch.py
Hose/mav_data_hose/: firehose_node.py
Inject/: .gitignore  README.md  RunEnv.sh  build_bridge.sh  package.xml  setup.cfg  setup.py
Inject/mav_inject/: CMakeLists.txt  config_controller.py  injection_test.py  param_lister.py  px4_param_api.py
Orchestra/: .gitignore  package.xml  setup.cfg  setup.py
Orchestra/Docs/: DroneAPI.md  FromScratchSetup.md  QuickSetup.md  SetupGuide.md
Orchestra/drone_api/: test_demo.py
waterfall/: README.md  coordinator.py  fault_monitor_demo.py  firehose_service.py  inject_service.py  manager.py  motor_reverse_finder.py  package.xml  px4_param_api.py  px4_param_bridge.c  setup.py  uniform_pump_service.py
waterfall/waterfall/: __init__.py  firehose_service.py  inject_service.py  manager.py  orchestra_service.py
waterfall/waterfall/drone_api/: interpolation.py  magpie.py  test_demo.py  test_stream_logging.py
